# chistiy-den

./: .gitignore  README.md  basic_text.fb2  build.gradle.kts  index.html  jft_data.js  manifest.json  privacy.html  settings.gradle.kts  sw.js  wrangler.jsonc
.github/workflows/: deploy-worker.yml
ai-service/: main.py  pyproject.toml  run.py
ai-service/app/: config.py  main.py
ai-service/app/agents/: recovery_agent.py
ai-service/app/emotion/: analyzer.py
ai-service/app/learning/: engine.py
ai-service/app/memory/: memory_store.py
ai-service/app/models/: schemas.py
ai-service/app/notifications/: engine.py
ai-service/app/personality/: core.py
ai-service/app/relationship/: memory.py
ai-service/app/safety/: guardrails.py
ai-service/app/services/: llm_service.py
android/: README.md  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: index.html  manifest.json
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: basic_text.fb2
app/src/main/res/drawable/: badge_accent.xml  card_border.xml  card_dashed.xml  circle_accent.xml  ic_book.xml  ic_bookmark.xml  ic_check.xml  ic_close.xml  ic_donate.xml  ic_heart.xml  ic_home.xml  ic_launcher.xml  ic_library.xml  ic_medal.xml  ic_note.xml  ic_profile.xml  ic_service.xml  ic_settings.xml  ic_users.xml  (+2 more)
cloudflare/: worker.js  wrangler.toml
tests/: README.md
tests/ai/: test_agent.py  test_agent_quick.py  test_evolution.py
tests/unit/: storage.test.js
(+78 files in other folders)
