[project]
name = "ai-recovery"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "httpx>=0.26",
    "chromadb>=0.4.22",
    "sentence-transformers>=2.2",
    "ollama>=0.1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "httpx",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
